--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="app_name">SimpleUpload</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="server_upload_address">http://www.example.com/upload</string>
+    <string name="server_auth_username">username</string>
+    <string name="server_auth_password">password</string>
 
 </resources>
