--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,4 +18,10 @@
 	<string name="uploader_notification_successful">Upload successful</string>
 	<string name="uploader_notification_failure">Upload failed</string>
 
+    <string name="pref_category_user">User</string>
+    <string name="pref_upload_username">Username</string>
+    <string name="pref_upload_password">Password</string>
+    <string name="pref_category_server">Server</string>
+    <string name="pref_upload_url">Upload URL</string>
+
 </resources>
