--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -21,5 +21,8 @@
     <string name="pref_upload_password">Password</string>
     <string name="pref_category_server">Server</string>
     <string name="pref_upload_url">Upload URL</string>
+    <string name="pref_upload_username_empty">No username set</string>
+    <string name="pref_upload_password_empty">No password set</string>
+    <string name="pref_upload_url_empty">No URL set</string>
 
 </resources>
