--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,6 +15,8 @@
 	<string name="uploader_notification_successful">Upload successful</string>
 	<string name="uploader_notification_failure">Upload failed</string>
 
+	<string name="clipboardreceiver_copied">Copied image URL</string>
+
 	<string name="pref_activity_name">SimpleUpload Settings</string>
     <string name="pref_category_user">User</string>
     <string name="pref_upload_username">Username</string>
