--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,8 +3,15 @@
 
     <string name="app_name">SimpleUpload</string>
     <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
     <string name="http_user_agent">SimpleUpload/0.1</string>
+
+    <string name="action_settings">Settings</string>
+    <string name="action_clear_history">Clear history</string>
+
+    <string name="dialog_clear_history_title">Clear history</string>
+    <string name="dialog_clear_history_prompt">Are you sure you want to erase the list of uploaded images?</string>
+    <string name="dialog_clear_history">Clear history</string>
+    <string name="dialog_cancel">Cancel</string>
 
     <plurals name="uploader_uploading_toast">
         <item quantity="zero">No images to upload!</item>
