--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,6 +8,7 @@
 
     <string name="action_settings">Settings</string>
     <string name="action_clear_history">Clear history</string>
+    <string name="action_delete_items">Delete items</string>
 
     <string name="dialog_clear_history_title">Clear history</string>
     <string name="dialog_clear_history_prompt">Are you sure you want to erase the list of uploaded images?</string>
