Do a better job displaying errors in notifications

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -25,6 +25,9 @@
     <string name="uploader_notification_uploading">Uploading image</string>
 	<string name="uploader_notification_successful">Upload successful</string>
 	<string name="uploader_notification_failure">Upload failed</string>
+	<string name="uploader_failed_unauthorized">Wrong username or password</string>
+	<string name="uploader_failed_wrong_url">Upload URL is incorrect</string>
+	<string name="uploader_failed_generic">Server returned an error</string>
 
 	<string name="clipboardreceiver_copied">Copied image URL</string>
 	<string name="clipboardreceiver_label">Image URL</string>
