Add number of images uploaded to notification

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -24,6 +24,7 @@
         <item quantity="other">Uploading %d images!</item>
     </plurals>
     <string name="uploader_notification_uploading">Uploading image</string>
+    <string name="uploader_notification_quantity">Image %1$d of %2$d</string>
 	<string name="uploader_notification_successful">Upload successful</string>
 	<string name="uploader_notification_failure">Upload failed</string>
 	<string name="uploader_failed_unauthorized">Wrong username or password</string>
